@@ -8,21 +8,12 @@ using namespace irr;
 using namespace core;
 
 template<class T>
-static bool isOnSameSide(const vector3d<T>& p1, const vector3d<T>& p2,
-	const vector3d<T>& a, const vector3d<T>& b)
-{
-	vector3d<T> bminusa = b - a;
-	vector3d<T> cp1 = bminusa.crossProduct(p1 - a);
-	vector3d<T> cp2 = bminusa.crossProduct(p2 - a);
-	return (cp1.dotProduct(cp2)+core::ROUNDING_ERROR_f64 >= 0.0f);
-}
-
-template<class T>
 static bool testGetIntersectionWithLine(core::triangle3d<T>& triangle, const core::line3d<T>& ray)
 {
 	bool allExpected=true;
 	const vector3d<T> linevect = ray.getVector().normalize();
 	vector3d<T> intersection;
+	// When we just raise Y parallel to the ray then either all should fail or all succeed (the latter in our case).
 	for (u32 i=0; i<100; ++i)
 	{
 		if (!triangle.getIntersectionOfPlaneWithLine(ray.start, linevect, intersection))
@@ -30,6 +21,7 @@ static bool testGetIntersectionWithLine(core::triangle3d<T>& triangle, const cor
 			allExpected=false;
 			logTestString("triangle3d plane test %d failed\n", i);
 		}
+		//logTestString("intersection: %f %f %f\n", intersection.X, intersection.Y, intersection.Z);
 		if (!triangle.isPointInsideFast(intersection))
 		{
 			allExpected=false;
@@ -39,12 +31,6 @@ static bool testGetIntersectionWithLine(core::triangle3d<T>& triangle, const cor
 		{
 			allExpected=false;
 			logTestString("triangle3d point test %d failed\n", i);
-		        if (!isOnSameSide(intersection, triangle.pointA, triangle.pointB, triangle.pointC))
-				logTestString("triangle3d side1 test %d failed\n", i);
-			if (!isOnSameSide(intersection, triangle.pointB, triangle.pointA, triangle.pointC))
-				logTestString("triangle3d side2 test %d failed\n", i);
-			if (!isOnSameSide(intersection, triangle.pointC, triangle.pointA, triangle.pointB))
-				logTestString("triangle3d side3 test %d failed\n", i);
 		}
 
 		if (!triangle.getIntersectionWithLine(ray.start, linevect, intersection))
@@ -276,41 +262,33 @@ bool testTriangle3d(void)
 {
 	bool allExpected = true;
 
-	/* TODO: disabled for now. I (aka CuteAlien) have by now an example which allows debugging
-	   that problem easier and also found some workaround (which needs an interface change
-	   and a behaviour change and won't get into 1.7 therefore).
 	logTestString("Test getIntersectionWithLine with f32\n");
 	{
 		triangle3df triangle(
-				vector3df(11300.000000f, 129.411758f, 200.000000f),
-				vector3df(11200.000000f, 94.117645f, 300.000000f),
-				vector3df(11300.000000f, 129.411758f, 300.000000f));
+				vector3df(11300.f, 129.411758f, 200.f),
+				vector3df(11200.f, 94.117645f, 300.f),
+				vector3df(11300.f, 129.411758f, 300.f));
 		line3df ray;
-		ray.start = vector3df(11250.000000f, 329.000000f, 250.000000f);
-		ray.end = vector3df(11250.000000, -1000.000000, 250.000000);
+		ray.start = vector3df(11250.f, 329.f, 250.f);
+		ray.end = vector3df(11250.f, -1000.f, 250.f);
 		allExpected &= testGetIntersectionWithLine(triangle, ray);
 	}
 	logTestString("Test getIntersectionWithLine with f64\n");
 	{
 		triangle3d<f64> triangle(
-				vector3d<f64>(11300.000000f, 129.411758f, 200.000000f),
-				vector3d<f64>(11200.000000f, 94.117645f, 300.000000f),
-				vector3d<f64>(11300.000000f, 129.411758f, 300.000000f));
+				vector3d<f64>(11300., 129.411758, 200.),
+				vector3d<f64>(11200., 94.117645, 300.),
+				vector3d<f64>(11300., 129.411758, 300.));
 		line3d<f64> ray;
-		ray.start = vector3d<f64>(11250.000000f, 329.000000f, 250.000000f);
-		ray.end = vector3d<f64>(11250.000000, -1000.000000, 250.000000);
+		ray.start = vector3d<f64>(11250., 329., 250.);
+		ray.end = vector3d<f64>(11250., -1000., 250.);
 		allExpected &= testGetIntersectionWithLine(triangle, ray);
 	}
-	*/
 
-	/* For now we have no solution yet to fix isPointInside for large integers without
-	getting worse floating-point precision at the same time.
-	So instead isPointInsideFast got fixed and should be used for int's.
 	bool testEigen = triangle3di(vector3di(250, 0, 0), vector3di(0, 0, 500), vector3di(500, 0, 500)).isPointInside(vector3di(300,0,300));
 	if ( !testEigen )	// test from Eigen from here: http://irrlicht.sourceforge.net/forum/viewtopic.php?f=7&t=44372&p=254331#p254331
 		logTestString("Test isPointInside fails with integers\n");
 	allExpected &= testEigen;
-	*/
 
 	logTestString("Test isPointInside with f32\n");
 	{
